--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,6 +4,7 @@ $font-stack: 'Outfit', sans-serif ;
 // font-sizes
 $font-size-base: 18px;
 $font-size-small: 16px;
+$font-size-large: 24px;
 
 //font-weights
 $font-weight-light: 300;
